feat: updates docker file
